[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/t_cave_tilesheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/tile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.7427, 14.7705 )

[node name="Tile" type="Sprite"]
texture = ExtResource( 1 )
vframes = 4
hframes = 4
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
